app/assets/styles/base/advertising.scss
@import 'globals';

// scss-lint:disable all

$skyscraper-width: 300px;

/**
 * AdTech ad content
 * Note: Added inside <div>s with by ad script
 * 1. Above everything but the header
 * 2. Pop-out ads above other ads
 */
.ad {
  position: relative;
  z-index: 50; /* 1 */
}

.ad * {
  box-sizing: content-box;
}

.ad a,
.ad img,
.ad object {
  display: inline-block;
  margin-bottom: 0 !important;
  background: none !important;
}

/**
 * Skyscraper Ad sidebar
 * 1. Hidden until there is space for it
 * 2. Push to the right-hand-side
 * 3. Above other ads (for pop-out ad)
 * 4. Use container as a base when centering
 */
 .container--skyscraper {
  position: relative;
 }

.ad--skyscraper {
  @include media('<=advertising-skyscraper') {
    display: none; /* 1 */
  }

  @include media('>advertising-skyscraper') {
    position: absolute; /* 2 */
    z-index: 51; /* 3 */
    height: 600px;
    left: calc(100% + 30px);
  }
}

/**
 * Advertising slots
 * 1. Center all content
 */
#top_board,
#rectangle,
#content_board,
#bottom_board {
  @include edges('pull');
  text-align: center;

  > div,
  > a,
  > img,
  > object {
    display: inline-block; /* 1 */
    text-align: left;
  }
}

/**
 * Top Board advert
 */
// #top_board {
//   @include media('<=mobile-portrait') {
//     margin-bottom: 30px;
//   }

//   @include media('>mobile-portrait') {
//     margin-bottom: 40px;
//   }
// }

/**
 * Content Board advert
 * 1. Explicit width required as flexbox also applied in layout.scss
 */
#content_board {
  @include media('<=mobile-portrait') {
    width: calc(100% + #{(2 * $container-spacing)}); /* 1 */
  }

  @include media('>mobile-portrait') {
    width: calc(100% + #{(4 * $container-spacing)}); /* 1 */
  }
}

/**
 * Content boards which break grid
 */
// .ad--grid-content-board {
//   @include media('<=mobile-portrait') {
//     margin-top: 30px;
//     margin-bottom: 50px;
//   }

//   @include media('>mobile-portrait') {
//     margin-top: 40px;
//     margin-bottom: 60px;
//   }
// }

/**
 * Bottom Board advert
 * Note: Never add bottom margin due to sticky skyscraper
 */
// #bottom_board {
//   @include media('<=mobile-portrait') {
//     margin-top: 30px;
//   }

//   @include media('>mobile-portrait') {
//     margin-top: 40px;
//   }
// }

/**
 * Skyscraper Advert
 * Note: Inserted with JS into article body
 */
#side_ad {
  width: $skyscraper-width;
}

/**
 * Rectangle Advert
 * Note: Inserted with JS into article body
 */
#rectangle {
  margin-bottom: 30px;

  @include media('>float-enrichments') {
    float: right;
    margin-left: 30px;
    margin-right: 0;
  }
}

/**
 * Rectangle Adverts first in article
 */
#rectangle:first-child {
  margin-top: 0;
}

/**
 * Rectangle Adverts last in article
 */
#rectangle:last-child {
  float: none;
  margin: 30px auto;
}

/**
 * Rectangle Adverts that appear lower than the sidebar
 */
#rectangle.is-below-sidebar:not(:last-child) {
  @include media('>desktop-laptop') {
    margin-right: -200px;
  }
}

/**
 * Hacking layout for when a rectangle ad immediately follows a floated enrichment
 */
.enrichment--aside + div #rectangle:first-child {
  @include media('>float-enrichments') {
    float: none;
    text-align: left;
    position: relative;
    top: 6px;
    margin-left: 0;
    margin-right: -50px;
  }
}

// scss-lint:enable all

